force-app/main/default/objects/Product__c/recordTypes/Standart_Product.recordType-meta.xml
<RecordType>
    <fullName>Standart_Product</fullName>
    <active>true</active>
    <label>Standart Product</label>
</RecordType>